<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>


        <variable
            name="presenter"
            type="com.fcn.park.home.HomePresenter"></variable>
    </data>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:scrollbars="none">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/app_layout_title"/>

    <!--轮播-->
    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <!--公告-->
    <LinearLayout
        android:id="@+id/ll_view_flipper_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:src="@drawable/ic_vector_home_affiche" />

        <ViewFlipper
            android:id="@+id/view_flipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoStart="true"
            android:inAnimation="@anim/anim_marquee_in"
            android:outAnimation="@anim/anim_marquee_out"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/colorLightGray"/>

    <LinearLayout
        android:id="@+id/often_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:onClick="@{()->presenter.onItemClick(1)}"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/water_fee"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_vector_water"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:text="@string/title_water_fee" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="0.25"
            android:onClick="@{()->presenter.onItemClick(2)}"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_vector_electric"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:text="@string/title_electric_fee" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_parking_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="0.25"
            android:onClick="@{()->presenter.onItemClick(3)}"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/parking_fee"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_vector_parking"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:text="@string/title_parking_fee" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_property_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="0.25"
            android:onClick="@{()->presenter.onItemClick(4)}"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/property_fee"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_vector_property_fee"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:text="@string/title_property_fee" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/home_rent_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:onClick="@{()->presenter.onItemClick(5)}"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/rent_fee"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_vector_rent_fee"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:text="@string/title_rent_fee" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="0.25"
            android:onClick="@{()->presenter.onItemClick(6)}"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/house_rent"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_vector_house_rent"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:text="@string/title_house_rent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="0.25"
            android:onClick="@{()->presenter.onItemClick(7)}"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/public_repair"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_vector_repair"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:text="@string/title_public_repair" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="0.25"
            android:onClick="@{()->presenter.onItemClick(8)}"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/convenient_service"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_vector_service"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:text="@string/title_convenient_service" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:onClick="@{()->presenter.onItemClick(9)}"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/monthCar_apply"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_vector_monthcar_apply"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_month_car_apply"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="0.25"
            android:onClick="@{()->presenter.onItemClick(10)}"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/advertisement"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_vector_advertisement"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_advertisement_rent"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="0.25"
            android:onClick="@{()->presenter.onItemClick(11)}"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/complain_suggest"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_vector_suggest"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_complain"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="0.25"
            android:onClick="@{()->presenter.onItemClick(12)}"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/function_more"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_vector_more"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:text="@string/menu_more" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/colorLightGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/often_use"
       android:layout_margin="8dp"
        android:orientation="horizontal">

        <View
            android:layout_width="3dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:background="@color/colorBlue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/title_recommend"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/recommend_more"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/title_more"
            android:onClick="@{()->presenter.onAdvertisementMore()}"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorGray" />

    <ImageView
        android:id="@+id/best_advertisement"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:scaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/colorLightGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/often_use"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <View
            android:layout_width="3dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:background="@color/colorBlue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/title_most_new_rent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/rent_more"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/title_more"
            android:textSize="14sp"
            android:onClick="@{()->presenter.onRentInfoMore()}" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorGray" />

    <com.fcn.park.base.widget.EmptyRecyclerView
        android:id="@+id/recycler_rent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"/>

    <include
        android:id="@+id/empty_view"
        layout="@layout/info_empty_layout" />

</LinearLayout>
</ScrollView>
</layout>